# ai-llm-engineering

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  classifier.py  extractor.py  llm_client.py  pipeline.py  rewriter.py  summarizer.py  tokenizer.py
examples/: resumeSummary.py  textSummary.py  webSummary.py
src/: main.py
weeks/_templates/project-template/: README.md
weeks/week-01-foundations/: README.md
weeks/week-01-foundations/projects/Summarizer/: README.md  main.py
weeks/week-01-foundations/projects/Summarizer/app/models/: llm_client.py
weeks/week-01-foundations/projects/Summarizer/app/orchestration/: pipeline.py
weeks/week-01-foundations/projects/Summarizer/app/tools/: classifier.py  extractor.py  rewriter.py  scraper.py  summarizer.py  tokenizer.py
weeks/week-01-foundations/projects/Summarizer/examples/: resumeSummary.py  textSummary.py  webSummary.py
weeks/week-01-foundations/projects/Summarizer/tests/: test_scraper.py
weeks/week-02-multimodal/: README.md
weeks/week-02-multimodal/projects/ai-support-agent/: main.py
weeks/week-02-multimodal/projects/ai-support-agent/app/models/: gpt_client.py  ollama_client.py
weeks/week-02-multimodal/projects/ai-support-agent/app/orchestration/: conversation_prompt.py
weeks/week-02-multimodal/projects/ai-support-agent/configs/: README.md  config.py  settings.py
